[package]
name = "beepcraft"
version = "0.0.0"
edition = "2024"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
avian3d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
